--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,13 @@
-apply plugin: 'java'
+plugins {
+    id 'application'
+}
 
 repositories {
-    maven {
-        url  "https://mvnrepository.com/artifact"
-    }
-    
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.3.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
 
