--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 dependencies {
     implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
 }
 
