--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,14 @@ repositories {
 
 dependencies {
     implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
+    implementation group: 'org.apache.kafka', name: 'kafka_2.13', version: '3.4.0'
+    implementation group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.6.4'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.35.v20201120'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.35.v20201120'
+    implementation group: 'com.yammer.metrics', name: 'metrics-core', version: '2.2.0'
+
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
+    implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.36'
 }
 
