--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ project('kafka-broker-reg') {
     }
 }
 
+project('slow-io-client') {
+    dependencies {
+        implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
+        implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.36'
+    }
+}
+
 dependencies {
     implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
