--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ project('slow-io-client') {
     dependencies {
         implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
         implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.36'
+
+        // AWS Timesteam client
+        implementation platform('software.amazon.awssdk:bom:2.20.53')
+        implementation 'software.amazon.awssdk:timestreamwrite:2.20.26'
+        implementation 'software.amazon.awssdk:timestreamquery:2.20.26'
+        implementation 'software.amazon.awssdk:apache-client:2.20.26'
     }
 
     mainClassName = "io.slow.IoStatisticsConsumer"
