--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ project('slow-io-client') {
         implementation 'software.amazon.awssdk:timestreamwrite:2.20.26'
         implementation 'software.amazon.awssdk:timestreamquery:2.20.26'
         implementation 'software.amazon.awssdk:apache-client:2.20.26'
+
+        implementation project(':ascii-tables')
     }
 
     mainClassName = "io.slow.IoStatisticsConsumer"
@@ -50,6 +52,10 @@ project('slow-io-client') {
             configurations.getByName("runtimeClasspath").collect { it.isDirectory() ? it : zipTree(it) }
         }
     }
+}
+
+project('ascii-tables') {
+
 }
 
 dependencies {
