--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 include 'ascii-tables'
+include 'kafka-storage-api'
+
 include 'io-stats-common'
 include 'io-stats-client'
+include 'io-stats-plugin'
 
 include 'kafka-broker-reg'
 
